Modulos metodos de actualizacion de componentes